--- a/index.html
+++ b/index.html
@@ -13,58 +13,83 @@
 
 <body>
   <header>
-    <h1 id="logo">Dev.Finances</h1>
+    <img src="./assets/logo.svg" alt="Logo Dev Finance">
   </header>
   <main class="container">
     <section id="balance">
-      <h2>Balanço</h2>
+      <h2 class="sr-only">Balanço</h2>
       <div class="card">
-        <h3>Entradas</h3>
-        <p>R$ 5.000,00</p>
+        <h3>
+          <span>Entradas</span>
+          <img src="./assets/income.svg" alt="Imagem de entradas">
+        </h3>
+        <p id="income-display">R$ 0,00</p>
       </div>
       <div class="card">
-        <h3>Saídas</h3>
-        <p>R$ 2.000,00</p>
+        <h3>
+          <span>Saídas</span>
+          <img src="./assets/expense.svg" alt="Imagem de saídas">
+        </h3>
+        <p id="expense-display">R$ 0,00</p>
       </div>
       <div class="card total">
-        <h3>Total</h3>
-        <p>R$ 3.000,00</p>
+        <h3>
+          <span>Total</span>
+          <img src="./assets/total.svg" alt="Imagem de total">
+        </h3>
+        <p id="total-display">R$ 0,00</p>
       </div>
     </section>
     <section id="transactions">
-      <h2>Transações</h2>
-
+      <h2 class="sr-only">Transações</h2>
+      <button type="button" class="button new">+ Nova Transação</button>
       <table id="data-table">
         <thead>
           <tr>
             <th>Descrição</th>
             <th>Valor</th>
             <th>Data</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td class="description">Luz</td>
-            <td class="expense">- R$ 500,00</td>
-            <td class="date">23/01/2021</td>
-          </tr>
-          <tr>
-            <td class="description">Desenvolvimento de site</td>
-            <td class="income">R$ 2.000,00</td>
-            <td class="date">23/01/2021</td>
-          </tr>
-          <tr>
-            <td class="description">Internet</td>
-            <td class="expense">- R$ 200,00</td>
-            <td class="date">27/01/2021</td>
-          </tr>
         </tbody>
       </table>
     </section>
   </main>
+  
   <footer>
-    <p>Dev.Finances</p>
+    <p>dev.finance$ - Robson Barbosa Souza produzido durante a Maratona Discover - Rocketseat - 2021 </p>
   </footer>
+
+  <div class="modal-overlay">
+    <div class="modal">
+      <div id="form">
+        <h2>Nova Transação</h2>
+        <form action="">
+          <div class="input-group">
+            <label for="description" class="sr-only">Descrição</label>
+            <input type="text" id="description" name="description" placeholder="Descrição">
+          </div>
+          <div class="input-group">
+            <label for="amount" class="sr-only">Valor</label>
+            <input type="number" id="amount" name="amount" placeholder="0,00" step="0.01">
+            <small class="help">Use o sinal -(negativo) para despesas e , (vírgula) para casas decimais.</small>
+          </div>
+          <div class="input-group">
+            <label for="date" class="sr-only">Data</label>
+            <input type="date" id="date" name="date" placeholder="dd/mm/yyyy">
+          </div>
+          <div class="input-group actions">
+            <button type="button" class="button cancel">Cancelar</button>
+            <button type="submit" class="button save">Salvar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <script src="scripts.js">
+  </script>
 </body>
 
 </html>
